--- a/database.yml
+++ b/database.yml
@@ -7,8 +7,5 @@ development:
   host: 127.0.0.1
   pool: 5
 
-test:
-  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/ensetservice_test?sslmode=disable"}}
-
 production:
-  url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/ensetservice_production?sslmode=disable"}}
+  url: {{envOr "DATABASE_URL" "postgres://ensetse_user:janah@127.0.0.1:5432/ENSETService?sslmode=disable"}}
