update Nginx conf file

--- a/nginx/enset_service.nginx.conf
+++ b/nginx/enset_service.nginx.conf
@@ -48,6 +48,7 @@ http {
 
         access_log /var/log/nginx/enset_service_access.log;
 
+        # Hide server
         more_set_headers 'Server: ENSETService (*_^)';
 
         location / {
